; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_thread_act.c_thread_policy.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_thread_act.c_thread_policy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KERN_SUCCESS = common dso_local global i64 0, align 8
@KERN_POLICY_STATIC = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @thread_policy(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %9, align 4
  %16 = load i32, i32* %10, align 4
  %17 = call i64 @_kernelrpc_thread_policy(i32 %12, i32 %13, i32 %14, i32 %15, i32 %16)
  store i64 %17, i64* %11, align 8
  %18 = load i64, i64* %11, align 8
  %19 = load i64, i64* @KERN_SUCCESS, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %5
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @_pthread_clear_qos_tsd(i32 %22)
  br label %31

24:                                               ; preds = %5
  %25 = load i64, i64* %11, align 8
  %26 = load i64, i64* @KERN_POLICY_STATIC, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %24
  %29 = load i64, i64* @KERN_SUCCESS, align 8
  store i64 %29, i64* %11, align 8
  br label %30

30:                                               ; preds = %28, %24
  br label %31

31:                                               ; preds = %30, %21
  %32 = load i64, i64* %11, align 8
  ret i64 %32
}

declare dso_local i64 @_kernelrpc_thread_policy(i32, i32, i32, i32, i32) #1

declare dso_local i32 @_pthread_clear_qos_tsd(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
